@@ -2,6 +2,10 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Mar 2007; Miroslav Šulc <fordfrog@gentoo.org>
+  netbeans-6.0_alpha7.ebuild:
+  Changed dependency from javahelp-bin to javahelp
+
   25 Feb 2007; Miroslav Šulc <fordfrog@gentoo.org>
   +netbeans-6.0_alpha7.ebuild, -netbeans-6.0_alpha20061023.ebuild,
   -netbeans-6.0_alpha20061109.ebuild,
